--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header><h1>Quiz App</h1></header>
+    <header class="header"><h1>Quiz App</h1></header>
   </body>
 </html>
