--- a/index.html
+++ b/index.html
@@ -8,5 +8,30 @@
   </head>
   <body>
     <header class="header"><h1>Quiz App</h1></header>
+    <main>
+      <div class="questionCard">
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
+        <div class="categoryTags">
+          <span>#html</span>
+          <span>#flexbox</span>
+          <span>#css</span>
+        </div>
+      </div>
+      <div class="questionCard">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi impedit
+          perspiciatis, blanditiis maxime consectetur dolorum accusamus aut
+          corrupti natus doloribus architecto ut vitae! Repellendus,
+          perferendis. Illum hic eius a rerum?
+        </p>
+        <button>Show Answer</button>
+        <div class="categoryTags">
+          <span>#html</span>
+          <span>#flexbox</span>
+          <span>#css</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
