--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
           <span>#html</span>
           <span>#flexbox</span>
           <span>#css</span>
+          <img
+            class="bookmarkIcon"
+            src="assets/bookmark-white.svg"
+            alt="bookmark"
+          />
         </div>
       </div>
       <div class="questionCard">
@@ -30,6 +35,11 @@
           <span>#html</span>
           <span>#flexbox</span>
           <span>#css</span>
+          <img
+            class="bookmarkIcon"
+            src="assets/bookmark-white.svg"
+            alt="bookmark"
+          />
         </div>
       </div>
     </main>
