--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <header class="header"><h1>Quiz App</h1></header>
@@ -43,5 +47,16 @@
         </div>
       </div>
     </main>
+    <footer>
+      <nav class="nav">
+        <ul class="breadcrumbs">
+          <li>
+            <a href="#" class="icon-link"><i class="fas fa-home"></i> </a>
+            <a href="#" class="icon-link"><i class="fas fa-bookmark"></i> </a>
+            <a href="#" class="icon-link"><i class="fas fa-user"></i> </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
