--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     />
   </head>
   <body>
-    <header class="header"><h1>Quiz App</h1></header>
+    <header class="header">
+      <h1>Quiz App</h1>
+    </header>
     <main>
       <div class="questionCard">
         <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
+        <div class="answerButton"><button>Show Answer</button></div>
         <div class="categoryTags">
           <span>#html</span>
           <span>#flexbox</span>
           <span>#css</span>
+        </div>
+        <div>
           <img
             class="bookmarkIcon"
             src="assets/bookmark-white.svg"
@@ -27,6 +31,7 @@
           />
         </div>
       </div>
+
       <div class="questionCard">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi impedit
@@ -34,11 +39,13 @@
           corrupti natus doloribus architecto ut vitae! Repellendus,
           perferendis. Illum hic eius a rerum?
         </p>
-        <button>Show Answer</button>
+        <div class="answerButton"><button>Show Answer</button></div>
         <div class="categoryTags">
           <span>#html</span>
           <span>#flexbox</span>
           <span>#css</span>
+        </div>
+        <div>
           <img
             class="bookmarkIcon"
             src="assets/bookmark-white.svg"
