--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
-  <body>
+  <body id="home">
     <header class="header">
       <h1>Quiz App</h1>
     </header>
@@ -55,19 +55,25 @@
       </div>
     </main>
     <footer>
-      <nav class="nav">
-        <ul class="breadcrumbs">
-          <li>
-            <a href="#" class="icon-link"><i class="fas fa-home"></i> </a>
-          </li>
-          <li>
-            <a href="#" class="icon-link"><i class="fas fa-bookmark"></i> </a>
-          </li>
-          <li>
-            <a href="#" class="icon-link"><i class="fas fa-user"></i> </a>
-          </li>
-        </ul>
-      </nav>
+      <div id="navigation">
+        <nav class="nav">
+          <ul class="breadcrumbs">
+            <li>
+              <a href="index.html" class="home"><i class="fas fa-home"></i> </a>
+            </li>
+            <li>
+              <a href="bookmarks.html" class="bookmark"
+                ><i class="fas fa-bookmark"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#profile.html" class="profile"
+                ><i class="fas fa-user"></i>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
