add active link highlighting

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
       </div>
     </main>
     <footer>
-      <div id="navigation">
-        <nav class="nav">
-          <ul class="breadcrumbs">
-            <li>
-              <a href="index.html" class="home"><i class="fas fa-home"></i> </a>
-            </li>
-            <li>
-              <a href="bookmarks.html" class="bookmark"
-                ><i class="fas fa-bookmark"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#profile.html" class="profile"
-                ><i class="fas fa-user"></i>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="nav">
+        <ul class="breadcrumbs">
+          <li>
+            <a href="index.html" class="activeIconLink"
+              ><i class="fas fa-home"></i>
+            </a>
+          </li>
+          <li>
+            <a href="bookmarks.html" class="iconLink"
+              ><i class="fas fa-bookmark"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#profile.html" class="iconLink"
+              ><i class="fas fa-user"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
