--- a/bookmarks.html
+++ b/bookmarks.html
@@ -53,15 +53,17 @@
       <nav class="nav">
         <ul class="breadcrumbs">
           <li>
-            <a href="index.html" class="home"><i class="fas fa-home"></i> </a>
+            <a href="index.html" class="iconLink"
+              ><i class="fas fa-home"></i>
+            </a>
           </li>
           <li>
-            <a href="bookmarks.html" class="bookmarks"
+            <a href="bookmarks.html" class="activeIconLink"
               ><i class="fas fa-bookmark"></i>
             </a>
           </li>
           <li>
-            <a href="#profile.html" class="profile"
+            <a href="#profile.html" class="iconLink"
               ><i class="fas fa-user"></i>
             </a>
           </li>
