fix missing code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
-  <body>
+  <body id="home">
     <header class="header">
       <h1>Quiz App</h1>
     </header>
@@ -58,13 +58,19 @@
       <nav class="nav">
         <ul class="breadcrumbs">
           <li>
-            <a href="#" class="icon-link"><i class="fas fa-home"></i> </a>
+            <a href="index.html" class="activeIconLink"
+              ><i class="fas fa-home"></i>
+            </a>
           </li>
           <li>
-            <a href="#" class="icon-link"><i class="fas fa-bookmark"></i> </a>
+            <a href="bookmarks.html" class="iconLink"
+              ><i class="fas fa-bookmark"></i>
+            </a>
           </li>
           <li>
-            <a href="#" class="icon-link"><i class="fas fa-user"></i> </a>
+            <a href="profile.html" class="iconLink"
+              ><i class="fas fa-user"></i>
+            </a>
           </li>
         </ul>
       </nav>
