--- a/index.html
+++ b/index.html
@@ -15,44 +15,46 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <div class="questionCard">
-        <p>What property flips the axes in flexbox?</p>
-        <div class="answerButton"><button>Show Answer</button></div>
-        <div class="categoryTags">
-          <span>#html</span>
-          <span>#flexbox</span>
-          <span>#css</span>
-        </div>
-        <div>
-          <img
-            class="bookmarkIcon"
-            src="assets/bookmark-white.svg"
-            alt="bookmark"
-          />
-        </div>
-      </div>
-
-      <div class="questionCard">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi impedit
-          perspiciatis, blanditiis maxime consectetur dolorum accusamus aut
-          corrupti natus doloribus architecto ut vitae! Repellendus,
-          perferendis. Illum hic eius a rerum?
-        </p>
-        <div class="answerButton"><button>Show Answer</button></div>
-        <div class="categoryTags">
-          <span>#html</span>
-          <span>#flexbox</span>
-          <span>#css</span>
-        </div>
-        <div>
-          <img
-            class="bookmarkIcon"
-            src="assets/bookmark-white.svg"
-            alt="bookmark"
-          />
-        </div>
-      </div>
+      <ul class="containerQuestionCards">
+        <li class="questionCard1">
+          <p>What property flips the axes in flexbox?</p>
+          <div class="answerButton"><button>Show Answer</button></div>
+          <div class="categoryTags">
+            <span>#html</span>
+            <span>#flexbox</span>
+            <span>#css</span>
+          </div>
+          <div>
+            <img
+              class="bookmarkIcon"
+              src="assets/bookmark-white.svg"
+              alt="bookmark"
+            />
+          </div>
+        </li>
+        <li class="questionCard2">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+              impedit perspiciatis, blanditiis maxime consectetur dolorum
+              accusamus aut corrupti natus doloribus architecto ut vitae!
+              Repellendus, perferendis. Illum hic eius a rerum?
+            </p>
+            <div class="answerButton"><button>Show Answer</button></div>
+            <div class="categoryTags">
+              <span>#html</span>
+              <span>#flexbox</span>
+              <span>#css</span>
+            </div>
+            <div>
+              <img
+                class="bookmarkIcon"
+                src="assets/bookmark-white.svg"
+                alt="bookmark"
+              />
+            </div>
+          </div>
+        </li>
+      </ul>
     </main>
     <footer>
       <nav class="nav">
@@ -68,7 +70,6 @@
             </a>
           </li>
           <li>
-
             <a href="profile.html" class="iconLink"
               ><i class="fas fa-user"></i>
             </a>
