make button accessible plus questions to button and p-tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="containerQuestionCards">
         <li class="questionCard1">
           <p>What property flips the axes in flexbox?</p>
-          <div class="answerButton"><button>Show Answer</button></div>
+          <button class="answerButton">Show Answer</button>
           <div class="categoryTags">
             <span>#html</span>
             <span>#flexbox</span>
@@ -39,7 +39,7 @@
               accusamus aut corrupti natus doloribus architecto ut vitae!
               Repellendus, perferendis. Illum hic eius a rerum?
             </p>
-            <div class="answerButton"><button>Show Answer</button></div>
+            <button class="answerButton">Show Answer</button>
             <div class="categoryTags">
               <span>#html</span>
               <span>#flexbox</span>
