--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     </header>
     <main>
       <ul class="containerQuestionCards">
-        <li class="questionCard1">
+        <li class="questionCard">
           <p>What property flips the axes in flexbox?</p>
           <button class="answerButton">Show Answer</button>
-          <div class="categoryTags">
-            <span>#html</span>
-            <span>#flexbox</span>
-            <span>#css</span>
-          </div>
+          <ul class="categoryTags">
+            <li>#html</li>
+            <li>#flexbox</li>
+            <li>#css</li>
+          </ul>
           <div>
             <img
               class="bookmarkIcon"
@@ -32,26 +32,20 @@
             />
           </div>
         </li>
-        <li class="questionCard2">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-              impedit perspiciatis, blanditiis maxime consectetur dolorum
-              accusamus aut corrupti natus doloribus architecto ut vitae!
-              Repellendus, perferendis. Illum hic eius a rerum?
-            </p>
-            <button class="answerButton">Show Answer</button>
-            <div class="categoryTags">
-              <span>#html</span>
-              <span>#flexbox</span>
-              <span>#css</span>
-            </div>
-            <div>
-              <img
-                class="bookmarkIcon"
-                src="assets/bookmark-white.svg"
-                alt="bookmark"
-              />
-            </div>
+        <li class="questionCard">
+          <p>What property flips the axes in flexbox?</p>
+          <button class="answerButton">Show Answer</button>
+          <ul class="categoryTags">
+            <li>#html</li>
+            <li>#flexbox</li>
+            <li>#css</li>
+          </ul>
+          <div>
+            <img
+              class="bookmarkIcon"
+              src="assets/bookmark-white.svg"
+              alt="bookmark"
+            />
           </div>
         </li>
       </ul>
