--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <main>
       <ul class="containerQuestionCards">
         <li class="questionCard">
-          <p>What property flips the axes in flexbox?</p>
+          <h2>What property flips the axes in flexbox?</h2>
           <button class="answerButton">Show Answer</button>
+          <p>flex-direction</p>
           <ul class="categoryTags">
             <li>#html</li>
             <li>#flexbox</li>
@@ -33,20 +34,26 @@
           </div>
         </li>
         <li class="questionCard">
-          <p>What property flips the axes in flexbox?</p>
+          <h2>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+            eum esse distinctio ipsum, voluptate repellat quis aliquam ut minima
+            totam aut doloribus libero nemo dolorem neque, animi modi ipsam.
+            Dolore?
+          </h2>
           <button class="answerButton">Show Answer</button>
+          <p>flex-direction</p>
           <ul class="categoryTags">
             <li>#html</li>
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <div>
+          <button class="bookmarkButton">
             <img
               class="bookmarkIcon"
               src="assets/bookmark-white.svg"
               alt="bookmark"
             />
-          </div>
+          </button>
         </li>
       </ul>
     </main>
