try to have bookmark as an image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div>
             <img
               class="bookmarkIcon"
-              src="assets/bookmark-white.svg"
+              src="assets/bookmark-black.svg"
               alt="bookmark"
             />
           </div>
@@ -51,7 +51,7 @@
             <img
               class="bookmarkIcon"
               src="assets/bookmark-white.svg"
-              alt="bookmark"
+              alt="bookmark icon"
             />
           </button>
         </li>
