changed also the html of bookmarks.index

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -16,40 +16,39 @@
     </header>
     <main>
       <ul class="containerQuestionCards">
-        <li class="questionCard1">
-          <p>???</p>
-          <div class="answerButton"><button>Show Answer</button></div>
-          <div class="categoryTags">
-            <span>#html</span>
-            <span>#flexbox</span>
-            <span>#css</span>
-          </div>
+        <li class="questionCard">
+          <h2>???</h2>
+          <button class="answerButton">Show Answer</button>
+          <p>flex-direction</p>
+          <ul class="categoryTags">
+            <li>#html</li>
+            <li>#flexbox</li>
+            <li>#css</li>
+          </ul>
           <div>
             <img
               class="bookmarkIcon"
-              src="assets/bookmark-white.svg"
+              src="assets/bookmark-black.svg"
               alt="bookmark"
             />
           </div>
         </li>
-        <li class="questionCard2">
-            <p>
-              ???
-            </p>
-            <div class="answerButton"><button>Show Answer</button></div>
-            <div class="categoryTags">
-              <span>#html</span>
-              <span>#flexbox</span>
-              <span>#css</span>
-            </div>
-            <div>
-              <img
-                class="bookmarkIcon"
-                src="assets/bookmark-white.svg"
-                alt="bookmark"
-              />
-            </div>
-          </div>
+        <li class="questionCard">
+          <h2>???</h2>
+          <button class="answerButton">Show Answer</button>
+          <p>flex-direction</p>
+          <ul class="categoryTags">
+            <li>#html</li>
+            <li>#flexbox</li>
+            <li>#css</li>
+          </ul>
+          <button class="bookmarkButton">
+            <img
+              class="bookmarkIcon"
+              src="assets/bookmark-white.svg"
+              alt="bookmark icon"
+            />
+          </button>
         </li>
       </ul>
     </main>
