try to add function to js file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="javascript" href="script.js" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -25,13 +26,13 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <div>
+          <button id="toggleButton">
             <img
-              class="bookmarkIcon"
-              src="assets/bookmark-black.svg"
-              alt="bookmark"
+              id="buttonImage"
+              src="assets/bookmark-white.svg"
+              alt="bookmark icon"
             />
-          </div>
+          </button>
         </li>
         <li class="questionCard">
           <h2>
@@ -47,9 +48,9 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <button class="bookmarkButton">
+          <button id="toggleButton">
             <img
-              class="bookmarkIcon"
+              id="buttonImage"
               src="assets/bookmark-white.svg"
               alt="bookmark icon"
             />
