feature with javascript works

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="script.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
-  <body id="bookmarks">
+  <body id="bookmark">
     <header class="header">
       <h1>Quiz App</h1>
     </header>
     <main>
       <ul class="containerQuestionCards">
         <li class="questionCard">
-          <h2>???</h2>
+          <h2>????</h2>
           <button class="answerButton">Show Answer</button>
           <p>flex-direction</p>
           <ul class="categoryTags">
@@ -25,16 +26,16 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <div>
+          <button class="toggleButton">
             <img
-              class="bookmarkIcon"
-              src="assets/bookmark-black.svg"
-              alt="bookmark"
+              class="buttonImage"
+              src="assets/bookmark-white.svg"
+              alt="bookmark icon"
             />
-          </div>
+          </button>
         </li>
         <li class="questionCard">
-          <h2>???</h2>
+          <h2>????</h2>
           <button class="answerButton">Show Answer</button>
           <p>flex-direction</p>
           <ul class="categoryTags">
@@ -42,9 +43,9 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <button class="bookmarkButton">
+          <button class="toggleButton">
             <img
-              class="bookmarkIcon"
+              class="buttonImage"
               src="assets/bookmark-white.svg"
               alt="bookmark icon"
             />
