--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="javascript" href="script.js" />
+    <script defer src="script.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -26,9 +26,9 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <button id="toggleButton">
+          <button class="toggleButton">
             <img
-              id="buttonImage"
+              class="buttonImage"
               src="assets/bookmark-white.svg"
               alt="bookmark icon"
             />
@@ -48,9 +48,9 @@
             <li>#flexbox</li>
             <li>#css</li>
           </ul>
-          <button id="toggleButton">
+          <button class="toggleButton">
             <img
-              id="buttonImage"
+              class="buttonImage"
               src="assets/bookmark-white.svg"
               alt="bookmark icon"
             />
