--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <ul class="containerQuestionCards">
         <li class="questionCard">
           <h2>What property flips the axes in flexbox?</h2>
-          <button class="answerButton">Show Answer</button>
-          <p>flex-direction</p>
+          <button class="answerButton" aria-expanded="false">
+            Show Answer
+          </button>
+          <p hidden>flex-direction</p>
           <ul class="categoryTags">
             <li>#html</li>
             <li>#flexbox</li>
@@ -29,7 +31,7 @@
             <img
               class="bookmarkIcon"
               src="assets/bookmark-black.svg"
-              alt="bookmark"
+              alt="bookmark this question"
             />
           </div>
         </li>
@@ -40,8 +42,10 @@
             totam aut doloribus libero nemo dolorem neque, animi modi ipsam.
             Dolore?
           </h2>
-          <button class="answerButton">Show Answer</button>
-          <p>flex-direction</p>
+          <button class="answerButton" aria-expanded="false">
+            Show Answer
+          </button>
+          <p hidden>flex-direction</p>
           <ul class="categoryTags">
             <li>#html</li>
             <li>#flexbox</li>
@@ -51,7 +55,7 @@
             <img
               class="bookmarkIcon"
               src="assets/bookmark-white.svg"
-              alt="bookmark icon"
+              alt="bookmark this question"
             />
           </button>
         </li>
@@ -61,17 +65,17 @@
       <nav class="nav">
         <ul class="breadcrumbs">
           <li>
-            <a href="index.html" class="activeIconLink"
+            <a href="index.html" class="activeIconLink" aria-label="Home"
               ><i class="fas fa-home"></i>
             </a>
           </li>
           <li>
-            <a href="bookmarks.html" class="iconLink"
+            <a href="bookmarks.html" class="iconLink" aria-label="Bookmarks"
               ><i class="fas fa-bookmark"></i>
             </a>
           </li>
           <li>
-            <a href="profile.html" class="iconLink"
+            <a href="profile.html" class="iconLink" aria-label="Profile"
               ><i class="fas fa-user"></i>
             </a>
           </li>
