--- a/bookmarks.html
+++ b/bookmarks.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
-  <body id="bookmark">
+  <body id="bookmarks">
     <header class="header">
       <h1>Quiz App</h1>
     </header>
