first styling of the page

--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,21 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <div class="profile__stage">
+      <section class="profile__stage">
         <img src="assets/person_icon.png" alt="your profile picture" />
         <h2>Max Doe</h2>
-      </div>
+      </section>
+      <section class="about">
+        <h3>About me</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          totam incidunt ipsa facilis vero sit doloremque blanditiis dolorum
+          tenetur id labore assumenda voluptatem error, facere, saepe harum,
+          quibusdam fugiat quos!
+        </p>
+      </section>
+      <section>counter</section>
+      <section>settings</section>
     </main>
     <footer>
       <nav class="nav">
