implementing an like increase button

--- a/profile.html
+++ b/profile.html
@@ -29,8 +29,22 @@
           quibusdam fugiat quos!
         </p>
       </section>
-      <section>counter</section>
-      <section>settings</section>
+      <section class="jsFunctions">
+        <button type="Button" class="jsButton" data-js="increase-likes">Likes
+            <output class="outputTextLikes" data-js="like-output"
+            >0</output
+          >
+        </button>
+
+        <button type="Button" class="jsButton" data-js="bookmarks">Bookmark</button>
+        </button>
+      </section>
+      <section class="jsFunctions">
+        <p class="settings">Settings</p>
+        <button type="Button" class="jsButton" data-js="darkmode">
+          Darkmode
+        </button>
+      </section>
     </main>
     <footer>
       <nav class="nav">
