implementing darkmode functionality on profilepage

--- a/profile.html
+++ b/profile.html
@@ -15,10 +15,10 @@
     <header class="header">
       <h1>Quiz App</h1>
     </header>
-    <main>
+    <main class="dark" data-js="body">
       <section class="profile__stage">
         <img src="assets/person_icon.png" alt="your profile picture" />
-        <h2>Max Doe</h2>
+        <h2 class="profile__name">Max Doe</h2>
       </section>
       <section class="about">
         <h3>About me</h3>
@@ -41,9 +41,9 @@
       </section>
       <section class="jsFunctions">
         <p class="settings">Settings</p>
-        <button type="Button" class="jsButton" data-js="darkmode">
-          Darkmode
-        </button>
+        <button class="jsButton button--toggle" data-js="toggle-button">
+            Toggle Mode
+          </button>
       </section>
     </main>
     <footer>
