implementing darkmode with a sliderbutton

--- a/profile.html
+++ b/profile.html
@@ -41,9 +41,15 @@
       </section>
       <section class="jsFunctions">
         <p class="settings">Settings</p>
-        <button class="jsButton button--toggle" data-js="toggle-button">
-            Toggle Mode
-          </button>
+        <div class="darkmode">       
+            <p>Dark Mode</p>   
+            <form>
+            <label>
+                <input type="checkbox" checked class="jsButton button--toggle" data-js="toggle-button"/>
+                <span></span>
+            </label>
+        </form>
+    </div>
       </section>
     </main>
     <footer>
