added form icon to all navigationsites

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -30,7 +30,6 @@
           </ul>
           <button class="toggleButton">
             <img
-
               class="buttonImage"
               src="assets/bookmark-white.svg"
               alt="bookmark this question"
@@ -38,7 +37,6 @@
           </button>
         </li>
         <li class="questionCard">
-
           <h2>???</h2>
           <button class="answerButton" aria-expanded="false">
             Show Answer
@@ -74,6 +72,11 @@
               class="activeIconLink"
               aria-label="Bookmarks"
               ><i class="fas fa-bookmark"></i>
+            </a>
+          </li>
+          <li>
+            <a href="form.html" class="iconLink" aria-label="Form"
+              ><i class="fas fa-plus"></i>
             </a>
           </li>
           <li>
