--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
             </a>
           </li>
           <li>
+            <a href="form.html" class="iconLink" aria-label="Form"
+              ><i class="fas fa-plus"></i>
+            </a>
+          </li>
+          <li>
             <a href="profile.html" class="iconLink" aria-label="Profile"
               ><i class="fas fa-user"></i>
             </a>
