adding global colors

--- a/form.html
+++ b/form.html
@@ -16,7 +16,17 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <p>test</p>
+      <h2 class="headlineForm" title="cardCreation">Create a card</h2>
+      <form id="cardCreation" class="form">
+        <label for="your-question">Your Question</label>
+        <textarea id="your-question"></textarea>
+        <label for="your-answer">Your Answer</label>
+        <textarea id="your-answer"></textarea>
+        <label for="tag">Tag</label>
+        <input type="text" id="tag"></input>
+        <label for="submit-button"></label>
+        <button type="submit" id="submit-button">Submit</button>
+      </form>
     </main>
     <footer>
       <nav class="nav">
