styling of the form

--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
       <h2 class="headlineForm" title="cardCreation">Create a card</h2>
       <form id="cardCreation" class="form">
         <label for="your-question">Your Question</label>
-        <textarea id="your-question"></textarea>
+        <textarea class="form__textarea" id="your-question"></textarea>
         <label for="your-answer">Your Answer</label>
         <textarea id="your-answer"></textarea>
         <label for="tag">Tag</label>
