--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <ul class="containerQuestionCards">
-        <li class="questionCard">
+        <li class="questionCardList">
           <h2>What property flips the axes in flexbox?</h2>
           <button
             class="answerButton"
@@ -40,7 +40,7 @@
             />
           </button>
         </li>
-        <li class="questionCard">
+        <li class="questionCardList">
           <h2>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
             eum esse distinctio ipsum, voluptate repellat quis aliquam ut minima
