--- a/form.html
+++ b/form.html
@@ -20,10 +20,10 @@
       <form id="cardCreation" class="form" data-js="form">
         <label for="your-question">Your Question:</label>
         <textarea required maxlength="150" name="inputQuestion" class="form__textarea" id="your-question"></textarea>
-        <p><span id="count-question">150</span> characters left</p>
+        <p class="characters"><span id="count-question">150</span> characters left</p>
         <label for="your-answer">Your Answer:</label>
         <textarea required maxlength="150" name="inputAnswer" id="your-answer"></textarea>
-        <p><span id="count-answer">150</span> characters left</p>
+        <p class="characters"><span id="count-answer">150</span> characters left</p>
         <label for="tag">Tag:</label>
         <input required name="inputTag" type="text" id="tag"></input>
         <label for="submit-button"></label>
