refactoring styleclasses for navigation.css

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -12,12 +12,12 @@
     />
   </head>
   <body id="bookmarks">
-    <header class="header">
+    <header class="page__header">
       <h1>Quiz App</h1>
     </header>
     <main>
       <ul class="containerQuestionCards">
-        <li class="questionCardList">
+        <li class="questionCardListItem">
           <h2>???</h2>
           <button class="answerButton" aria-expanded="false">
             Show Answer
@@ -36,7 +36,7 @@
             />
           </button>
         </li>
-        <li class="questionCardList">
+        <li class="questionCardListItem">
           <h2>???</h2>
           <button class="answerButton" aria-expanded="false">
             Show Answer
@@ -59,29 +59,26 @@
       </ul>
     </main>
     <footer>
-      <nav class="nav">
-        <ul class="breadcrumbs">
+      <nav class="navigation">
+        <ul class="navigation__list">
           <li>
-            <a href="index.html" class="iconLink" aria-label="Home"
-              ><i class="fas fa-home"></i>
+            <a href="index.html" aria-label="Home"
+              ><i class="fas fa-home navigation__icon"></i>
             </a>
           </li>
           <li>
-            <a
-              href="bookmarks.html"
-              class="activeIconLink"
-              aria-label="Bookmarks"
-              ><i class="fas fa-bookmark"></i>
+            <a href="bookmarks.html" aria-label="Bookmarks"
+              ><i class="fas fa-bookmark navigation__icon--active"></i>
             </a>
           </li>
           <li>
-            <a href="form.html" class="iconLink" aria-label="Form"
-              ><i class="fas fa-plus"></i>
+            <a href="form.html" aria-label="Form"
+              ><i class="fas fa-plus navigation__icon"></i>
             </a>
           </li>
           <li>
-            <a href="profile.html" class="iconLink" aria-label="Profile"
-              ><i class="fas fa-user"></i>
+            <a href="profile.html" aria-label="Profile"
+              ><i class="fas fa-user navigation__icon"></i>
             </a>
           </li>
         </ul>
