--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body id="profile">
-    <header class="header">
+    <header class="page__header">
       <h1>Quiz App</h1>
     </header>
     <main class="dark" data-js="body">
@@ -53,26 +53,26 @@
       </section>
     </main>
     <footer>
-      <nav class="nav">
-        <ul class="breadcrumbs">
+      <nav class="navigation">
+        <ul class="navigation__list">
           <li>
-            <a href="index.html" class="iconLink" aria-label="Home"
-              ><i class="fas fa-home"></i>
+            <a href="index.html" aria-label="Home"
+              ><i class="fas fa-home navigation__icon"></i>
             </a>
           </li>
           <li>
-            <a href="bookmarks.html" class="iconLink" aria-label="Bookmarks"
-              ><i class="fas fa-bookmark"></i>
+            <a href="bookmarks.html" aria-label="Bookmarks"
+              ><i class="fas fa-bookmark navigation__icon"></i>
             </a>
           </li>
           <li>
-            <a href="form.html" class="iconLink" aria-label="Form"
-              ><i class="fas fa-plus"></i>
+            <a href="form.html" aria-label="Form"
+              ><i class="fas fa-plus navigation__icon"></i>
             </a>
           </li>
           <li>
-            <a href="profile.html" class="activeIconLink" aria-label="Profile"
-              ><i class="fas fa-user"></i>
+            <a href="profile.html" aria-label="Profile"
+              ><i class="fas fa-user navigation__icon--active"></i>
             </a>
           </li>
         </ul>
